[project]
name = "tech-analysis-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "yfinance>=0.2.56",
]
